# website

./: .gitignore  mkdocs.yml  pyproject.toml  requirements.txt
cv/: Mason_Youngblood_CV.yaml  bibtex_wrangler.py  citations.bib  render_cv.sh
cv/rendercv_output/: Mason_Youngblood_CV.html  Mason_Youngblood_CV.md  Mason_Youngblood_CV.typ
docs/: art.md  index.md  links.md  music.md  press.md  publications.md  software.md
docs/css/: extra.css
docs/resources/press/: full_press_list.md  generate_press_list.py  manual_articles.csv  scrape_press_coverage.py  scraped_articles.csv
docs/resources/publications/: generate_publications.py
other/old_website/: link_cards.json  news_coverage.html  news_coverage.ipynb
other/old_website/old_website/: art.html  index.html  music.html  press.html  publications.html
other/old_website/old_website/music_files/: C1XSJy-M3Vo.html  analytics-71a3feaa0f64e037060ad521a2160108.js  embed.js  embedded_player-00f771748e891fb06a81ba8889956343.js  embedded_player-e5952006057763222369c3ef2adc00c5.css  embedded_player_v3_large-cba3625520b30babd46179721c1712e2.css  gtm.js  impl-03e284b7a210b6a98f00c6a63ac00e7c.js  jquery-090b43cbd59fde07dd6c5f2d31a95a7d.js  ns(1).html  saved_resource  saved_resource(10).html  saved_resource(11).html  saved_resource(12).html  saved_resource(13).html  saved_resource(15).html  saved_resource(3)  saved_resource(5)  saved_resource(6).html  saved_resource(7).html  saved_resource(8).html  saved_resource(9).html  saved_resource.html  widget-0-9391df240022.js  widget-8-c0f1713ce21f.js  widget-9-8b99ef54b623.js  (+1 more)
(+15 files in other folders)
