[project]
name = "website"
version = "0.1.0"
description = "Website"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Mason Youngblood", email = "masonyoungblood@gmail.com" }
]
dependencies = [
    "bibtexparser>=1.4.3",
    "bs4>=0.0.2",
    "cairosvg>=2.8.2",
    "langdetect>=1.0.9",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-open-in-new-tab>=1.0.8",
    "pillow>=12.0.0",
    "pymdown-extensions>=10.19.1",
    "rendercv>=2.5",
    "titlecase>=2.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
