[project]
name = "website"
version = "0.1.0"
description = "Website"
readme = "README.md"
requires-python = "==3.13.3"
authors = [
    { name = "Mason Youngblood", email = "masonyoungblood@gmail.com" }
]
dependencies = [
    "bibtexparser",
    "bs4",
    "cairosvg",
    "hatchling>=1.28.0",
    "langdetect",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-open-in-new-tab",
    "pillow",
    "pymdown-extensions",
    "rendercv",
    "titlecase",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
